[project]
name = "html-2-md-backend"
version = "1.0.0"
description = "FastAPI backend that converts URLs to Markdown"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "html2text>=2024.2.26",
    "lxml>=5.2",
    "readability-lxml>=0.8",
    "pydantic-settings>=2.3",
    "readability>=0.3.2",
]

[tool.fastapi]
entrypoint = "app.main:app"
